data/collection/fixes/descriptions/scala/scala-6551
```scala
import language.dynamics

object Test {
  def main(args: Array[String]) {
    class Lenser[T] extends Dynamic {
      def selectDynamic(propName: String) = ???
    }

    def lens[T] = new Lenser[T]

    val qq = lens[String]
  }
}
```

```scala
12:03 ~/Projects/aaa$ scalac Test.scala 
Test.scala:11: error: method selectDynamic: (propName: String)Nothing does not take type parameters.
error after rewriting to lens[T].selectDynamic[String]("apply")
possible cause: maybe a wrong Dynamic method signature?
    val qq = lens[String]
             ^
one error found
```